...

            <Spinner
                android:id="@+id/spinner_task_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_assigned"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_delivering"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_delivered"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_failed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_refused"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_returned"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_total"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_total_delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_total_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/label_task_summary_total_other_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_assigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_delivering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_refused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_returned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/tv_task_summary_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/label_task_summary_total"
            app:layout_constraintStart_toStartOf="@+id/tv_task_summary_total_delivery_fee"
            app:layout_constraintTop_toTopOf="@+id/label_task_summary_total" />

...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/label_task_summary_total_delivery_fee"
            app:layout_constraintStart_toStartOf="@+id/tv_task_summary_total_cash"
            app:layout_constraintTop_toTopOf="@+id/label_task_summary_total_delivery_fee" />

...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/label_task_summary_total_cash"
            app:layout_constraintStart_toStartOf="@+id/tv_task_summary_total_other_payment"
            app:layout_constraintTop_toTopOf="@+id/label_task_summary_total_cash" />

...

        <TextView
            android:id="@+id/label_task_summary_total_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
