...
        <item>Absence</item>
        <item>Other</item>
    </string-array>

    <string-array name="taskSummaryValues">
        <item>Today</item>
        <item>3 Days</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>

    <string name="RefusalCommentError">Please enter refusal comments</string>
    <string name="amount_paid_error">Please enter amount paid</string>
    <string name="amount_error">Please enter amount</string>
    <string name="invalid_amount_error">Please enter valid amount without decimal</string>
...
    <!-- Notifications sync failed -->
    <string name="notification_sync_failed">Unable to retrieve latest data</string>

    <string name="sync_success">Data Synced</string>
    <string name="hint_zero">0</string>
    <string name="enter_amount_hint">Enter amount paid</string>
    <string name="title_task_summary">Task Summary</string>
    <string name="title_task_memo">Task Memo</string>
    <string name="error_task_memo">Enter Task Memo</string>
    <string name="title_paid_by">Paid By</string>
    <string name="title_task_history">Task History</string>
    <string name="title_task_no_history">No history found</string>
    <string name="non_editable_transaction">This item cannot be edited</string>
...
